[package]
name = "ws-tun"
version = "0.1.0"
authors = ["Yingyu Cheng <github@winguse.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
log = "0.4.8"
clap = "2.33.0"
chrono = "0.4.19"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.13.0"
futures-util = "0.3.13"
etherparse = "0.9.0"

